# za-bota-test

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
bot/: __main__.py  config.py  const.py  database.py  main.py  models.py  schemas.py
bot/handlers/: messages.py
bot/migrations/: env.py
bot/migrations/versions/: 579d506dfce1_added_user_model.py
bot/services/: gpt.py  messages.py
