[project]
name = "za-bota-test"
version = "0.1.0"
description = ""
readme = "README.md"
dependencies = [
    "aiogram~=3.22.0",
    "openai~=2.8.1",
    "sqlalchemy~=2.0.44",
    "pydantic-settings~=2.12.0",
    "pydantic~=2.11.10",
    "asyncpg~=0.30.0",
    "alembic~=1.17.2"
]
requires-python = ">= 3.11"